// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileInput component should render properly with all props 1`] = `
.c1 {
  color: #13181D;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  margin: 0px 0px 0.8rem 0px;
  cursor: default;
}

.c1 ::after {
  color: red;
  content: ' *';
}

.c5 {
  margin: 0;
  color: grey;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c2 {
  grid-area: label;
  align-self: center;
  user-select: none;
}

.c6 {
  grid-area: description;
  margin: 5px 0 0 2px;
  color: grey;
}

.c0 {
  margin: 0.8rem 0;
  display: grid;
  align-items: center;
  grid-template-areas: 'label' 'field' 'description';
}

.c4 {
  width: 1px;
  opacity: 0;
}

.c3 {
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
  padding: 0.8rem;
  color: #435465;
  background-clip: padding-box;
  background-color: #C7D0D8;
  box-sizing: border-box;
  border: 1px solid #b0bcc8;
  border-radius: 5px;
  cursor: not-allowed;
  text-align: center;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  user-select: none;
  width: calc(100% - 0px);
}

.c3:focus {
  border-color: #012040;
  outline: 0;
}

<div>
  <div
    class="c0"
    id="medly-file-input-field"
    labelposition="top"
  >
    <label
      class="c1 c2"
      labelposition="top"
      required=""
    >
      Email Address
    </label>
    <label
      class="c3"
      disabled=""
      for="medly-file-input"
      id="medly-file-input-label"
    >
      foo.txt, bar.txt
      <input
        class="c4"
        files="[object File],[object File]"
        id="medly-file-input"
        required=""
        type="file"
      />
    </label>
    <span
      class="c5 c6"
      textalign="initial"
      textcolor="grey"
    >
      We will never share your email with anyone
    </span>
  </div>
</div>
`;

exports[`FileInput component should render properly with default props 1`] = `
.c0 {
  margin: 0.8rem 0.8rem 0.8rem 0;
  display: inline-grid;
  align-items: center;
  grid-template-areas: 'label' 'field' 'description';
  grid-template-columns: auto;
  grid-template-areas: 'field' 'description';
}

.c2 {
  width: 1px;
  opacity: 0;
}

.c1 {
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
  padding: 0.8rem;
  color: #435465;
  background-clip: padding-box;
  background-color: #ffffff;
  box-sizing: border-box;
  border: 1px solid #b0bcc8;
  border-radius: 5px;
  cursor: pointer;
  text-align: center;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  user-select: none;
}

.c1:focus {
  border-color: #012040;
  outline: 0;
}

<div>
  <div
    class="c0"
    id="medly-file-input-field"
    labelposition="top"
  >
    <label
      class="c1"
      for="medly-file-input"
      id="medly-file-input-label"
    >
      Click to choose file
      <input
        class="c2"
        files=""
        id="medly-file-input"
        type="file"
      />
    </label>
  </div>
</div>
`;
